--- a/index.html
+++ b/index.html
@@ -8,37 +8,145 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-*{ margin:0; padding:0; box-sizing:border-box; font-family:'Poppins',sans-serif;}
-body{background:#fff5f9;color:#333;}
-header{background:linear-gradient(135deg,#ff9ecb,#ff4fa3);padding:60px 20px;text-align:center;color:white;}
-header h1{font-size:42px;font-weight:700;}
-header p{margin-top:10px;font-size:18px;}
-.btn{display:inline-block;margin-top:20px;padding:12px 28px;background:white;color:#ff4fa3;text-decoration:none;font-weight:600;border-radius:30px;transition:0.3s;}
-.btn:hover{background:#333;color:white;}
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:'Poppins',sans-serif;
+}
 
-section{padding:60px 20px;max-width:1100px;margin:auto;}
-.section-title{text-align:center;margin-bottom:40px;font-size:28px;font-weight:600;color:#ff4fa3;}
+body{
+    background:#fff5f9;
+    color:#333;
+}
 
-.products{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:20px;}
-.card{background:white;padding:20px;border-radius:12px;box-shadow:0 6px 15px rgba(0,0,0,0.1);text-align:center;transition:0.25s;}
-.card:hover{transform:translateY(-6px);}
-.card h3{margin-bottom:8px;color:#ff4fa3;}
-.card p{font-size:14px;margin-bottom:12px;}
-.card a{display:inline-block;padding:8px 20px;background:#ff4fa3;color:white;text-decoration:none;border-radius:20px;font-size:14px;}
+header{
+    background:linear-gradient(135deg,#ff9ecb,#ff4fa3);
+    padding:60px 20px;
+    text-align:center;
+    color:white;
+}
 
-footer{background:#ff4fa3;color:white;text-align:center;padding:18px;font-size:14px;}
+.logo{
+    width:120px;
+    margin-bottom:20px;
+}
+
+header h1{
+    font-size:36px;
+    font-weight:700;
+}
+
+header p{
+    margin-top:10px;
+    font-size:18px;
+}
+
+.btn{
+    display:inline-block;
+    margin:15px 10px 0 10px;
+    padding:12px 28px;
+    background:white;
+    color:#ff4fa3;
+    text-decoration:none;
+    font-weight:600;
+    border-radius:30px;
+    transition:0.3s;
+}
+
+.btn:hover{
+    background:#333;
+    color:white;
+}
+
+section{
+    padding:60px 20px;
+    max-width:1100px;
+    margin:auto;
+}
+
+.section-title{
+    text-align:center;
+    margin-bottom:40px;
+    font-size:28px;
+    font-weight:600;
+    color:#ff4fa3;
+}
+
+.products{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+    gap:20px;
+}
+
+.card{
+    background:white;
+    padding:20px;
+    border-radius:12px;
+    box-shadow:0 6px 15px rgba(0,0,0,0.1);
+    text-align:center;
+    transition:0.25s;
+}
+
+.card:hover{
+    transform:translateY(-6px);
+}
+
+.card h3{
+    margin-bottom:8px;
+    color:#ff4fa3;
+}
+
+.card p{
+    font-size:14px;
+    margin-bottom:12px;
+}
+
+.card a{
+    display:inline-block;
+    padding:8px 20px;
+    background:#ff4fa3;
+    color:white;
+    text-decoration:none;
+    border-radius:20px;
+    font-size:14px;
+}
+
+.social-section{
+    text-align:center;
+}
+
+.social-section a{
+    margin:10px;
+}
+
+footer{
+    background:#ff4fa3;
+    color:white;
+    text-align:center;
+    padding:18px;
+    font-size:14px;
+}
 </style>
 </head>
 <body>
 
 <header>
+
+    <!-- LOGO PLACE -->
+    <img src="logo.png" alt="Skin Glam Logo" class="logo">
+
     <h1>Skin Glam by Amna Khalid</h1>
-    <p>Your Glow | Affiliate Curator | Skincare Recommendations</p>
-    <a href="https://www.pinterest.com/amna_khalid_786/" class="btn">Products + Pins</a>
+    <p>Curated Skincare • Honest Reviews • Glow That Works</p>
+
+    <a href="https://www.pinterest.com/amna_khalid_786/" class="btn">Pinterest</a>
+    <a href="https://www.instagram.com/skingalmbyamnakhalid/" class="btn">Instagram</a>
+
 </header>
 
 <section>
     <h2 class="section-title">Featured Skincare Picks</h2>
+
     <div class="products">
 
         <div class="card">
@@ -55,34 +163,30 @@ footer{background:#ff4fa3;color:white;text-align:center;padding:18px;font-size:1
 
         <div class="card">
             <h3>Gentle Cleanser</h3>
-            <p>Clean without stripping.</p>
-            <a href=https://www.pinterest.com/amna_khalid_786/">Shop Now</a>
+            <p>Clean without stripping your barrier.</p>
+            <a href="https://www.pinterest.com/amna_khalid_786/">Shop Now</a>
         </div>
 
         <div class="card">
             <h3>SPF 50 Sunscreen</h3>
-            <p>Daily broad spectrum defense.</p>
+            <p>Daily broad spectrum protection.</p>
             <a href="https://www.pinterest.com/amna_khalid_786/">Shop Now</a>
         </div>
 
     </div>
 </section>
 
-<section id="pinterest">
-    <h2 class="section-title">Follow My Pinterest</h2>
-    <!-- Pinterest Follow/Profile Embed -->
-    <a data-pin-do="embedProfile" data-pin-lang="en" data-pin-board-width="400" data-pin-scale-height="600"
-       data-pin-scale-width="80" href="https://www.pinterest.com/amna_khalid_786/">
-       Follow Skin Glam on Pinterest
-    </a>
-    <!-- Pinterest script -->
-    <script async defer src="https://assets.pinterest.com/js/pinit.js"></script>
+<section class="social-section">
+    <h2 class="section-title">Follow & Shop</h2>
+
+    <a href="https://www.pinterest.com/amna_khalid_786/" class="btn">Visit Pinterest</a>
+    <a href="https://www.instagram.com/skingalmbyamnakhalid/" class="btn">Follow on Instagram</a>
+
 </section>
 
 <footer>
-    © 2026 Skin Glam by Amna Khalid | Some links are affiliate and we may earn commissions.
+    © 2026 Skin Glam by Amna Khalid | Affiliate Disclosure: We may earn commissions from qualifying purchases.
 </footer>
 
 </body>
 </html>
-
