--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ footer{
 <header>
 
     <!-- LOGO PLACE -->
-    <img src="logo.png" alt="Skin Glam Logo" class="logo">
+    <img src="final logo.png" alt="Skin Glam Logo" class="logo">
 
     <h1>Skin Glam by Amna Khalid</h1>
     <p>Curated Skincare • Honest Reviews • Glow That Works</p>
