--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ header{
 }
 
 .logo{
-    width:120px;
-    margin-bottom:25px;
+    width:180px;
+    margin-bottom:30px;
 }
 
 header h1{
     font-size:36px;
-    font-weight:700;
+    font-weigh:700;
 }
 
 header p{
