--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ footer{
 <header>
 
     <!-- LOGO PLACE -->
-    <img src="final_logo.png" alt="Skin Glam Logo" class="logo">
+    <img src="final_logo1.png" alt="Skin Glam Logo" class="logo">
 
     <h1>Skin Glam by Amna Khalid</h1>
     <p>Curated Skincare • Honest Reviews • Glow That Works</p>
